--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TravelTales - Share Your Journey</title>
+    <title>TravelTales - Discover India</title>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.5.1/dist/simpleParallax.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Poppins', sans-serif;
+            scroll-behavior: smooth;
         }
         .parallax-header {
             height: 70vh;
@@ -29,35 +29,46 @@
             color: #f97316;
             transition: color 0.3s ease;
         }
-        .story-card:hover {
+        .story-card:hover, .blog-card:hover {
             transform: translateY(-5px);
             transition: transform 0.3s ease;
+        }
+        .badge {
+            background-color: #f97316;
+            color: white;
+            font-size: 12px;
+            font-weight: bold;
+            padding: 0.2rem 0.6rem;
+            border-radius: 12px;
+            display: inline-block;
         }
     </style>
 </head>
 <body class="bg-gray-50">
+    <!-- Navbar -->
     <nav class="fixed w-full bg-white/90 backdrop-blur-md z-50 shadow-sm">
         <div class="container mx-auto px-4 py-4">
             <div class="flex justify-between items-center">
                 <div class="text-2xl font-bold text-orange-500">TravelTales</div>
                 <div class="hidden md:flex space-x-6">
-                    <a href="#" class="nav-link">Home</a>
-                    <a href="#" class="nav-link">Explore</a>
-                    <a href="#" class="nav-link">Blog</a>
-                    <a href="#" class="nav-link">My Trips</a>
-                    <a href="#" class="nav-link">Profile</a>
+                    <a href="#featured-stories" class="nav-link">Explore</a>
+                    <a href="#blog-section" class="nav-link">Blog</a>
+                    <a href="#plan-trip" class="nav-link">My Trips</a>
+                    <a href="#profile-section" class="nav-link">Profile</a>
                 </div>
                 <button class="md:hidden"><i class="bi bi-list text-2xl"></i></button>
             </div>
         </div>
     </nav>
+
+    <!-- Hero Section -->
     <header class="parallax-header relative flex items-center justify-center">
         <div class="absolute inset-0 bg-black/40"></div>
         <div class="relative text-center text-white px-4">
-            <h1 class="text-4xl md:text-6xl font-bold mb-6">Discover Your Next Adventure</h1>
+            <h1 class="text-4xl md:text-6xl font-bold mb-6">Discover Incredible India</h1>
             <div class="max-w-3xl mx-auto">
                 <div class="flex flex-col md:flex-row gap-2">
-                    <input type="text" placeholder="Where do you want to go?" class="flex-1 px-6 py-3 rounded-full text-gray-800">
+                    <input type="text" placeholder="Where do you want to go in India?" class="flex-1 px-6 py-3 rounded-full text-gray-800">
                     <button class="bg-orange-500 hover:bg-orange-600 text-white px-8 py-3 rounded-full transition">
                         Search
                     </button>
@@ -65,73 +76,105 @@
             </div>
         </div>
     </header>
-    <section class="container mx-auto px-4 py-16">
+
+    <!-- Featured Travel Stories Section -->
+    <section id="featured-stories" class="container mx-auto px-4 py-16">
         <h2 class="text-3xl font-bold mb-8">Featured Travel Stories</h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+            <!-- Cards -->
             <div class="story-card bg-white rounded-xl shadow-md overflow-hidden transition">
-                <img src="https://images.unsplash.com/photo-1520250497591-112f2f40a3f4" class="h-48 w-full object-cover">
+                <img src="https://plus.unsplash.com/premium_photo-1691031428827-adf34ee712d4?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="h-48 w-full object-cover">
                 <div class="p-6">
-                    <h3 class="font-bold text-xl mb-2">A Week in Paradise</h3>
-                    <p class="text-gray-600">Exploring the hidden beaches of Bali and discovering local culture...</p>
+                    <h3 class="font-bold text-xl mb-2">Rajasthan's Desert Majesty</h3>
+                    <p class="text-gray-600">A camel ride under the stars in Jaisalmer's Thar Desert...</p>
                 </div>
             </div>
             <div class="story-card bg-white rounded-xl shadow-md overflow-hidden transition">
-                <img src="https://images.unsplash.com/photo-1503220317375-aaad61436b1b" class="h-48 w-full object-cover">
+                <img src="https://plus.unsplash.com/premium_photo-1664303556708-4b582f8c6b5b?q=80&w=2874&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
                 <div class="p-6">
-                    <h3 class="font-bold text-xl mb-2">Mountain Adventure</h3>
-                    <p class="text-gray-600">Hiking through the Swiss Alps with breathtaking views...</p>
+                    <h3 class="font-bold text-xl mb-2">Serene Backwaters of Kerala</h3>
+                    <p class="text-gray-600">Discover tranquility in the lush greenery of Alleppey...</p>
                 </div>
             </div>
             <div class="story-card bg-white rounded-xl shadow-md overflow-hidden transition">
-                <img src="https://images.unsplash.com/photo-1514565131-fce0801e5785" class="h-48 w-full object-cover">
+                <img src="https://images.unsplash.com/photo-1494806812796-244fe51b774d?q=80&w=2934&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="h-48 w-full object-cover">
                 <div class="p-6">
-                    <h3 class="font-bold text-xl mb-2">City Lights</h3>
-                    <p class="text-gray-600">Experience the vibrant nightlife of Tokyo...</p>
+                    <h3 class="font-bold text-xl mb-2">Himalayan Adventures</h3>
+                    <p class="text-gray-600">Trekking in Himachal's snow-capped mountains...</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="bg-gray-100 py-16">
+    <!-- Blog Section -->
+    <section id="blog-section" class="bg-gray-100 py-16">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold mb-8">Popular Destinations</h2>
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-6">
-                <div class="bg-white rounded-xl overflow-hidden shadow-md hover:shadow-lg transition">
-                    <img src="https://images.unsplash.com/photo-1522093007474-d86e9bf7ba6f" class="h-40 w-full object-cover">
-                    <div class="p-4">
-                        <h3 class="font-bold">Paris, France</h3>
-                        <button class="mt-2 text-orange-500 hover:text-orange-600">Explore →</button>
+            <h2 class="text-3xl font-bold mb-8">Travel Blogs</h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div class="blog-card bg-white rounded-xl shadow-md overflow-hidden transition">
+                    <img src="https://plus.unsplash.com/premium_photo-1731606078756-d9102149265c?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="h-48 w-full object-cover">
+                    <div class="p-6">
+                        <h3 class="font-bold text-xl mb-2">Exploring Delhi's Street Food</h3>
+                        <p class="text-gray-600">A guide to savoring chaats, parathas, and more...</p>
                     </div>
                 </div>
-                <div class="bg-white rounded-xl overflow-hidden shadow-md hover:shadow-lg transition">
-                    <img src="https://images.unsplash.com/photo-1533050487297-09b450131914" class="h-40 w-full object-cover">
-                    <div class="p-4">
-                        <h3 class="font-bold">Tokyo, Japan</h3>
-                        <button class="mt-2 text-orange-500 hover:text-orange-600">Explore →</button>
+                <div class="blog-card bg-white rounded-xl shadow-md overflow-hidden transition">
+                    <img src="https://media.istockphoto.com/id/1325412864/photo/night-celebration-party-on-the-beach.jpg?s=1024x1024&w=is&k=20&c=3kHSWb-WtVs7BaQ_-0FcIFmtYJ2SxTv3-ki2JDvqbBQ=" class="h-48 w-full object-cover">
+                    <div class="p-6">
+                        <h3 class="font-bold text-xl mb-2">A Weekend in Goa</h3>
+                        <p class="text-gray-600">Beaches, parties, and Portuguese heritage...</p>
                     </div>
                 </div>
-                <div class="bg-white rounded-xl overflow-hidden shadow-md hover:shadow-lg transition">
-                    <img src="https://images.unsplash.com/photo-1518548419970-58e3b4079ab2" class="h-40 w-full object-cover">
-                    <div class="p-4">
-                        <h3 class="font-bold">New York, USA</h3>
-                        <button class="mt-2 text-orange-500 hover:text-orange-600">Explore →</button>
-                    </div>
-                </div>
-                <div class="bg-white rounded-xl overflow-hidden shadow-md hover:shadow-lg transition">
-                    <img src="https://images.unsplash.com/photo-1512453979798-5ea266f8880c" class="h-40 w-full object-cover">
-                    <div class="p-4">
-                        <h3 class="font-bold">Dubai, UAE</h3>
-                        <button class="mt-2 text-orange-500 hover:text-orange-600">Explore →</button>
+                <div class="blog-card bg-white rounded-xl shadow-md overflow-hidden transition">
+                    <img src="https://media.istockphoto.com/id/537988165/photo/varanasi.jpg?s=1024x1024&w=is&k=20&c=zlypUzvUt1fFpvA7ESTKB6UE4KEY7paAizZWVhQmz2E=" class="h-48 w-full object-cover">
+                    <div class="p-6">
+                        <h3 class="font-bold text-xl mb-2">Varanasi: City of Lights</h3>
+                        <p class="text-gray-600">Dive into spirituality along the ghats of the Ganges...</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="container mx-auto px-4 py-16">
-        <h2 class="text-3xl font-bold mb-8">Plan Your Next Trip</h2>
-        <div id="map"></div>
+    <!-- Profile Section -->
+    <section id="profile-section" class="container mx-auto px-4 py-16">
+        <h2 class="text-3xl font-bold mb-8">My Profile</h2>
+        <div class="bg-white rounded-xl shadow-md p-6 flex flex-col md:flex-row gap-6">
+            <!-- Profile Picture -->
+            <div class="flex-shrink-0">
+                <img src="https://media.istockphoto.com/id/1364817609/vector/sketch-of-tourist-photographer-taking-picture-on-camera-outdoors.jpg?s=1024x1024&w=is&k=20&c=cEEd8oxtEmxdx-acWac5Hw4eQhQjhjBlLfa4acWciuQ=" alt="Profile Picture" class="h-32 w-32 rounded-full object-cover border-4 border-orange-500">
+            </div>
+            <!-- Profile Details -->
+            <div>
+                <h3 class="text-2xl font-bold">Harshrajsinh Zala</h3>
+                <p class="text-gray-600">Passionate about discovering India's vibrant culture and hidden gems.</p>
+                <div class="mt-4">
+                    <span class="badge">Explorer</span>
+                    <span class="badge">Photographer</span>
+                    <span class="badge">Foodie</span>
+                </div>
+                <div class="mt-6">
+                    <h4 class="text-xl font-bold mb-2">Upcoming Trips</h4>
+                    <ul class="list-disc ml-6 text-gray-600">
+                        <li>Road trip from Mumbai to Leh</li>
+                        <li>Exploring the Sundarbans</li>
+                        <li>Heritage tour in Jaipur</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </section>
+
+    <!-- Plan Your Trip Section -->
+    <section id="plan-trip" class="bg-gray-100 py-16">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold mb-8">Plan Your Next Trip</h2>
+            <div id="map"></div>
+            <div id="location-card" class="hidden mt-6 bg-white rounded-xl shadow-md p-6"></div>
+        </div>
+    </section>
+    
+<!-- Footer -->
     <footer class="bg-gray-800 text-white py-12">
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
@@ -166,35 +209,67 @@
         </div>
     </footer>
 
+    <!-- JavaScript for Map -->
     <script>
-        const map = L.map('map').setView([20, 0], 2);
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+        // Initialize the map
+    const map = L.map('map').setView([20.5937, 78.9629], 5); // India's coordinates
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        maxZoom: 19,
+        attribution: '© OpenStreetMap',
+    }).addTo(map);
 
-        const destinations = [
-            {lat: 48.8566, lng: 2.3522, name: "Paris"},
-            {lat: 35.6762, lng: 139.6503, name: "Tokyo"},
-            {lat: 40.7128, lng: -74.0060, name: "New York"},
-            {lat: 25.2048, lng: 55.2708, name: "Dubai"}
-        ];
+    // Predefined locations with details
+    const locations = [
+        {
+            name: "Jaipur",
+            lat: 26.9124,
+            lng: 75.7873,
+            description: "The Pink City of India, Jaipur is famous for its royal palaces, vibrant bazaars, and historic forts.",
+            image: "https://images.unsplash.com/photo-1602643163983-ed0babc39797?q=80&w=2865&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D", // Jaipur image
+        },
+        {
+            name: "Delhi",
+            lat: 28.7041,
+            lng: 77.1025,
+            description: "India's capital, Delhi, is a blend of history and modernity with famous landmarks like India Gate and Red Fort.",
+            image: "https://plus.unsplash.com/premium_photo-1697730320983-f99aab252a44?q=80&w=2667&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D", // Delhi image
+        },
+        {
+            name: "Goa",
+            lat: 15.2993,
+            lng: 74.1240,
+            description: "Known for its beaches, nightlife, and Portuguese heritage, Goa is a paradise for travelers.",
+            image: "https://images.unsplash.com/photo-1607577070449-531c2296916c?q=80&w=2825&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D", // Goa image
+        },
+    ];
 
-        destinations.forEach(dest => {
-            L.marker([dest.lat, dest.lng])
-                .bindPopup(`<b>${dest.name}</b><br>Click to explore!`)
-                .addTo(map);
-        });
+    // Handle map clicks
+    map.on('click', function (e) {
+        const { lat, lng } = e.latlng;
 
-        document.querySelector('.bi-list').addEventListener('click', function() {
-            const menu = document.querySelector('.md\\:flex');
-            menu.classList.toggle('hidden');
-            menu.classList.toggle('flex');
-            menu.classList.toggle('flex-col');
-            menu.classList.toggle('absolute');
-            menu.classList.toggle('top-16');
-            menu.classList.toggle('left-0');
-            menu.classList.toggle('right-0');
-            menu.classList.toggle('bg-white');
-            menu.classList.toggle('p-4');
-        });
+        // Find the nearest predefined location (within 1-degree threshold)
+        const location = locations.find(
+            loc => Math.abs(loc.lat - lat) < 1 && Math.abs(loc.lng - lng) < 1
+        );
+
+        if (location) {
+            // Add a marker for the location
+            L.marker([location.lat, location.lng]).addTo(map).bindPopup(location.name).openPopup();
+
+            // Display the location card
+            const card = document.getElementById('location-card');
+            card.innerHTML = `
+                <img src="${location.image}" alt="${location.name}" class="h-48 w-full object-cover rounded-t-xl">
+                <div class="p-4">
+                    <h3 class="text-2xl font-bold mb-2">${location.name}</h3>
+                    <p class="text-gray-600">${location.description}</p>
+                </div>
+            `;
+            card.classList.remove('hidden');
+        } else {
+            alert('No predefined location found near this point. Please try another spot!');
+        }
+    });
     </script>
 </body>
 </html>
