--- a/contact.html
+++ b/contact.html
@@ -7,40 +7,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        .form-input {
-            @apply w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 focus:border-orange-500 outline-none transition-all;
-        }
-        .form-input:invalid:not(:placeholder-shown) {
-            @apply border-red-500 focus:ring-red-500 focus:border-red-500;
-        }
-        .form-input:valid:not(:placeholder-shown) {
-            @apply border-green-500;
-        }
-        .submit-button {
-            @apply w-full bg-orange-500 text-white py-3 px-6 rounded-lg hover:bg-orange-600 transition-all focus:ring-2 focus:ring-orange-500 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed flex items-center justify-center gap-2;
-        }
-        .loading-spinner {
-            @apply animate-spin h-5 w-5;
-        }
-        .form-container {
-            @apply bg-white p-8 rounded-xl shadow-lg border border-gray-100;
-        }
-        .form-error {
-            @apply text-red-600 text-sm mt-1 flex items-center gap-1;
-        }
-        .form-message {
-            @apply p-4 rounded-lg mb-4 flex items-center gap-2 text-sm font-medium;
-        }
-        .form-message.success {
-            @apply bg-green-50 text-green-700 border border-green-200;
-        }
-        .form-message.error {
-            @apply bg-red-50 text-red-700 border border-red-200;
-        }
-    </style>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/public/css/styles.css">
 </head>
 <body class="bg-gray-50">
     <!-- Navbar -->
@@ -280,107 +248,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script>
-        // Form handling
-        const form = document.getElementById('contactForm');
-        const formMessage = document.getElementById('formMessage');
-        const spinner = form.querySelector('.loading-spinner');
-        const submitText = form.querySelector('button[type="submit"] span');
-
-        // Input validation functions
-        const validators = {
-            name: (value) => {
-                if (value.length < 2) return 'Name must be at least 2 characters long';
-                if (!/^[A-Za-z\s]+$/.test(value)) return 'Name can only contain letters and spaces';
-                return '';
-            },
-            email: (value) => {
-                if (!/^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/.test(value)) return 'Please enter a valid email address';
-                return '';
-            },
-            subject: (value) => {
-                if (value.length < 3) return 'Subject must be at least 3 characters long';
-                return '';
-            },
-            message: (value) => {
-                if (value.length < 10) return 'Message must be at least 10 characters long';
-                return '';
-            }
-        };
-
-        // Real-time validation
-        Object.keys(validators).forEach(field => {
-            const input = document.getElementById(field);
-            const errorDiv = document.getElementById(`${field}Error`);
-            
-            input.addEventListener('input', () => {
-                const error = validators[field](input.value);
-                errorDiv.textContent = error;
-                errorDiv.classList.toggle('hidden', !error);
-                input.setAttribute('aria-invalid', error ? 'true' : 'false');
-            });
-        });
-
-        form.addEventListener('submit', function(e) {
-            e.preventDefault();
-            
-            // Check all validations before submitting
-            let hasErrors = false;
-            Object.keys(validators).forEach(field => {
-                const input = document.getElementById(field);
-                const error = validators[field](input.value);
-                const errorDiv = document.getElementById(`${field}Error`);
-                errorDiv.textContent = error;
-                errorDiv.classList.toggle('hidden', !error);
-                if (error) hasErrors = true;
-            });
-
-            if (hasErrors) return;
-
-            // Show loading state
-            const submitButton = form.querySelector('button[type="submit"]');
-            submitButton.disabled = true;
-            spinner.classList.remove('hidden');
-            submitText.textContent = 'Sending...';
-
-            // Add CSRF token
-            const formData = new FormData(form);
-            formData.append('_csrf', Math.random().toString(36).substring(2));
-
-            fetch(form.action, {
-                method: 'POST',
-                body: formData,
-                headers: {
-                    'Accept': 'application/json'
-                }
-            })
-            .then(response => response.json())
-            .then(data => {
-                formMessage.classList.remove('hidden', 'bg-red-100', 'text-red-700');
-                formMessage.classList.add('bg-green-100', 'text-green-700');
-                formMessage.textContent = 'Thank you! Your message has been sent successfully.';
-                form.reset();
-                // Reset validation states
-                Object.keys(validators).forEach(field => {
-                    const input = document.getElementById(field);
-                    input.setAttribute('aria-invalid', 'false');
-                    document.getElementById(`${field}Error`).classList.add('hidden');
-                });
-            })
-            .catch(error => {
-                formMessage.classList.remove('hidden', 'bg-green-100', 'text-green-700');
-                formMessage.classList.add('bg-red-100', 'text-red-700');
-                formMessage.textContent = 'Oops! There was a problem sending your message. Please try again.';
-            })
-            .finally(() => {
-                submitButton.disabled = false;
-                spinner.classList.add('hidden');
-                submitText.textContent = 'Send Message';
-                formMessage.classList.remove('hidden');
-            });
-        });
-    </script>
-    <script src="/js/navigation.js"></script>
-    <script src="/js/carousel.js"></script>
+    <script src="/public/js/navigation.js"></script>
+    <script src="/public/js/forms.js"></script>
 </body>
 </html> 
