--- a/explore.html
+++ b/explore.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="story-card bg-white rounded-xl shadow-md overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1598890777032-bde835ba27c2?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="h-48 w-full object-cover">
+                <img src="https://plus.unsplash.com/premium_photo-1661964079694-ccfaf7dc8028?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8dWRhaXB1cnxlbnwwfHwwfHx8MA%3D%3D" class="h-48 w-full object-cover">
                 <div class="p-6">
                     <h3 class="font-bold text-xl mb-2">Udaipur</h3>
                     <p class="text-gray-600 mb-4">The City of Lakes, known for its romantic setting and royal heritage.</p>
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="story-card bg-white rounded-xl shadow-md overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1591099112017-7c7be4b63465?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="h-48 w-full object-cover">
+                <img src="https://images.unsplash.com/photo-1720819029162-8500607ae232?q=80&w=3132&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="h-48 w-full object-cover">
                 <div class="p-6">
                     <h3 class="font-bold text-xl mb-2">Rishikesh</h3>
                     <p class="text-gray-600 mb-4">The yoga capital offering spiritual experiences and adventure sports.</p>
