--- a/profile.html
+++ b/profile.html
@@ -139,7 +139,7 @@
             <h2 class="text-2xl font-bold mb-8">My Travel Stories</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="bg-white rounded-xl shadow-md overflow-hidden">
-                    <img src="https://images.unsplash.com/photo-1564507592333-c60657eea523?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="h-48 w-full object-cover">
+                    <img src="https://images.unsplash.com/photo-1660294119408-a0ddf71872e2?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8dGFqJTIwbWFoYWwlMjBzdW5yaXNlfGVufDB8fDB8fHww" class="h-48 w-full object-cover">
                     <div class="p-6">
                         <h3 class="font-bold text-xl mb-2">Taj Mahal at Dawn</h3>
                         <p class="text-gray-600">Experiencing the magical sunrise at the monument of love...</p>
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 <div class="bg-white rounded-xl shadow-md overflow-hidden">
-                    <img src="https://images.unsplash.com/photo-1598890777032-bde835ba27c2?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="h-48 w-full object-cover">
+                    <img src="https://media.istockphoto.com/id/629006734/photo/city-palace-and-pichola-lake-in-udaipur-india.webp?a=1&b=1&s=612x612&w=0&k=20&c=45Qsa3SCNoHyl_xXnY780gt1QfhktJVipQrVNRwPYkk=" class="h-48 w-full object-cover">
                     <div class="p-6">
                         <h3 class="font-bold text-xl mb-2">Udaipur Palace Visit</h3>
                         <p class="text-gray-600">A royal experience in the City of Lakes...</p>
@@ -167,7 +167,7 @@
                     </div>
                 </div>
                 <div class="bg-white rounded-xl shadow-md overflow-hidden">
-                    <img src="https://images.unsplash.com/photo-1591099112017-7c7be4b63465?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="h-48 w-full object-cover">
+                    <img src="https://images.unsplash.com/photo-1650341259809-9314b0de9268?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cmlzaGlrZXNofGVufDB8fDB8fHww" class="h-48 w-full object-cover">
                     <div class="p-6">
                         <h3 class="font-bold text-xl mb-2">Rishikesh Adventures</h3>
                         <p class="text-gray-600">White water rafting and spiritual awakening...</p>
