--- a/blogs.html
+++ b/blogs.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="blog-card bg-white rounded-xl shadow-md overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1598890777032-bde835ba27c2?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="h-64 w-full object-cover">
+                <img src="https://plus.unsplash.com/premium_photo-1661963369594-9b25cd53be4d?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fHVkYWlwdXJ8ZW58MHx8MHx8fDA%3D" class="h-64 w-full object-cover">
                 <div class="p-6">
                     <div class="flex items-center mb-4">
                         <img src="https://randomuser.me/api/portraits/women/44.jpg" class="h-10 w-10 rounded-full mr-4">
@@ -104,7 +104,7 @@
             <h2 class="text-3xl font-bold mb-8">Recent Stories</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="blog-card bg-white rounded-xl shadow-md overflow-hidden">
-                    <img src="https://images.unsplash.com/photo-1591099112017-7c7be4b63465?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="h-48 w-full object-cover">
+                    <img src="https://media.istockphoto.com/id/182755489/photo/young-woman-meditating-by-ganges-river-in-rishikesh-india.webp?a=1&b=1&s=612x612&w=0&k=20&c=cIup9CXDPA6U32LKMODUeQg3ikg_-4QAAwUjJ8wRLEk=" class="h-48 w-full object-cover">
                     <div class="p-6">
                         <h3 class="font-bold text-xl mb-2">Spiritual Journey in Rishikesh</h3>
                         <p class="text-gray-600 mb-4">Finding peace and adventure in the yoga capital of the world...</p>
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <div class="blog-card bg-white rounded-xl shadow-md overflow-hidden">
-                    <img src="https://images.unsplash.com/photo-1588096344356-9b047c9471dc?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="h-48 w-full object-cover">
+                    <img src="https://media.istockphoto.com/id/164922731/photo/golden-temple-amritsar.webp?a=1&b=1&s=612x612&w=0&k=20&c=PIQv3rgkoMmyanP0Rs6BY9SnyMR-J9qUz-W6qCC8nfU=" class="h-48 w-full object-cover">
                     <div class="p-6">
                         <h3 class="font-bold text-xl mb-2">Golden Temple: A Divine Experience</h3>
                         <p class="text-gray-600 mb-4">Experiencing the spiritual aura of Amritsar's Golden Temple...</p>
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="blog-card bg-white rounded-xl shadow-md overflow-hidden">
-                    <img src="https://images.unsplash.com/photo-1590123717647-ee0cfe88403d?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="h-48 w-full object-cover">
+                    <img src="https://images.unsplash.com/photo-1593682011146-7f6b1b055cde?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8a2VyZWxhfGVufDB8fDB8fHww" class="h-48 w-full object-cover">
                     <div class="p-6">
                         <h3 class="font-bold text-xl mb-2">Kerala's Hidden Treasures</h3>
                         <p class="text-gray-600 mb-4">Exploring the lesser-known gems of God's Own Country...</p>
