--- a/index.html
+++ b/index.html
@@ -218,14 +218,12 @@
 
     <!-- JavaScript for Map -->
     <script>
-        // Initialize the map
-        const map = L.map('map').setView([20.5937, 78.9629], 5); // India's coordinates
+        const map = L.map('map').setView([20.5937, 78.9629], 5); 
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             maxZoom: 19,
             attribution: '© OpenStreetMap',
         }).addTo(map);
 
-        // Predefined locations with details
         const locations = [
             {
                 name: "Jaipur",
