--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TravelTales - Discover India</title>
-    <link rel="icon" type="image/x-icon" href="./public/images/traveltales.png">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./public/images/traveltales.png"
+    />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <link
       rel="stylesheet"
@@ -20,8 +23,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css">
-    
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body class="bg-gray-50">
     <!-- Navbar -->
@@ -37,7 +39,20 @@
             <a href="about.html" class="nav-link">About</a>
             <a href="contact.html" class="nav-link">Contact</a>
           </div>
-          <button class="md:hidden"><i class="bi bi-list text-2xl"></i></button>
+          <button id="menu-btn" class="md:hidden">
+            <i class="bi bi-list text-2xl"></i>
+          </button>
+          <div
+            id="mobile-menu"
+            class="md:hidden hidden opacity-0 -translate-y-5 transition-all duration-200 ease-in-out flex flex-col gap-4 px-4 py-6 absolute top-full left-0 w-full bg-white shadow-md z-50"
+          >
+            <a href="explore.html" class="nav-link text-gray-700">Explore</a>
+            <a href="blogs.html" class="nav-link text-gray-700">Blog</a>
+            <a href="#plan-trip" class="nav-link text-gray-700">My Trips</a>
+            <a href="profile.html" class="nav-link text-gray-700">Profile</a>
+            <a href="about.html" class="nav-link text-gray-700">About</a>
+            <a href="contact.html" class="nav-link text-gray-700">Contact</a>
+          </div>
         </div>
       </div>
     </nav>
@@ -265,7 +280,9 @@
               <a href="#" class="text-2xl hover:text-orange-500"
                 ><i class="bi bi-twitter"></i
               ></a>
-              <a href="https://www.instagram.com/harshrajsinh_08" class="text-2xl hover:text-orange-500"
+              <a
+                href="https://www.instagram.com/harshrajsinh_08"
+                class="text-2xl hover:text-orange-500"
                 ><i class="bi bi-instagram"></i
               ></a>
             </div>
@@ -289,7 +306,6 @@
       </div>
     </footer>
 
-   <script src = "script.js"></script>
-    
+    <script src="script.js"></script>
   </body>
 </html>
