--- a/profile.html
+++ b/profile.html
@@ -54,17 +54,32 @@
             <a href="about.html" class="nav-link">About</a>
             <a href="contact.html" class="nav-link">Contact</a>
           </div>
-          <button class="md:hidden"><i class="bi bi-list text-2xl"></i></button>
+          <div class="flex items-center space-x-4">
+            <span id="userEmail" class="hidden text-sm text-gray-600"></span>
+            <button
+              id="logoutBtn"
+              class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-lg text-sm transition"
+            >
+              Logout
+            </button>
+          </div>
+          <button id="mobile-menu-toggle" class="md:hidden"><i class="bi bi-list text-2xl"></i></button>
           <div
             id="mobile-menu"
             class="md:hidden hidden opacity-0 -translate-y-5 transition-all duration-200 ease-in-out flex flex-col gap-4 px-4 py-6 absolute top-full left-0 w-full bg-white shadow-md z-50"
           >
             <a href="explore.html" class="nav-link text-gray-700">Explore</a>
             <a href="blogs.html" class="nav-link text-gray-700">Blog</a>
-            <a href="#plan-trip" class="nav-link text-gray-700">My Trips</a>
+            <a href="index.html#plan-trip" class="nav-link text-gray-700">My Trips</a>
             <a href="profile.html" class="nav-link text-gray-700">Profile</a>
             <a href="about.html" class="nav-link text-gray-700">About</a>
             <a href="contact.html" class="nav-link text-gray-700">Contact</a>
+            <button
+              id="mobileLogoutBtn"
+              class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-lg text-sm transition w-full"
+            >
+              Logout
+            </button>
           </div>
         </div>
       </div>
@@ -302,5 +317,82 @@
         </div>
       </div>
     </footer>
+
+    <!-- Mobile Navigation JavaScript -->
+    <script>
+      // Check authentication on page load
+      document.addEventListener('DOMContentLoaded', function() {
+        const isLoggedIn = localStorage.getItem('isLoggedIn');
+        const userEmail = localStorage.getItem('userEmail');
+        
+        if (!isLoggedIn) {
+          window.location.href = 'login.html';
+          return;
+        }
+        
+        // Display user email in navbar
+        if (userEmail) {
+          document.getElementById('userEmail').textContent = userEmail;
+          document.getElementById('userEmail').classList.remove('hidden');
+        }
+      });
+
+      // Logout functionality
+      function logout() {
+        localStorage.removeItem('isLoggedIn');
+        localStorage.removeItem('userEmail');
+        window.location.href = 'login.html';
+      }
+
+      document.getElementById('logoutBtn').addEventListener('click', logout);
+      document.getElementById('mobileLogoutBtn').addEventListener('click', logout);
+
+      // Mobile menu toggle functionality
+      const mobileMenuToggle = document.getElementById("mobile-menu-toggle");
+      const mobileMenu = document.getElementById("mobile-menu");
+
+      mobileMenuToggle.addEventListener("click", function() {
+        if (mobileMenu.classList.contains("hidden")) {
+          // Show menu
+          mobileMenu.classList.remove("hidden");
+          setTimeout(() => {
+            mobileMenu.classList.remove("opacity-0", "-translate-y-5");
+            mobileMenu.classList.add("opacity-100", "translate-y-0");
+          }, 10);
+        } else {
+          // Hide menu
+          mobileMenu.classList.remove("opacity-100", "translate-y-0");
+          mobileMenu.classList.add("opacity-0", "-translate-y-5");
+          setTimeout(() => {
+            mobileMenu.classList.add("hidden");
+          }, 200);
+        }
+      });
+
+      // Close mobile menu when clicking outside
+      document.addEventListener("click", function(e) {
+        if (!mobileMenuToggle.contains(e.target) && !mobileMenu.contains(e.target)) {
+          if (!mobileMenu.classList.contains("hidden")) {
+            mobileMenu.classList.remove("opacity-100", "translate-y-0");
+            mobileMenu.classList.add("opacity-0", "-translate-y-5");
+            setTimeout(() => {
+              mobileMenu.classList.add("hidden");
+            }, 200);
+          }
+        }
+      });
+
+      // Close mobile menu when clicking on a link
+      const mobileMenuLinks = mobileMenu.querySelectorAll("a");
+      mobileMenuLinks.forEach(link => {
+        link.addEventListener("click", function() {
+          mobileMenu.classList.remove("opacity-100", "translate-y-0");
+          mobileMenu.classList.add("opacity-0", "-translate-y-5");
+          setTimeout(() => {
+            mobileMenu.classList.add("hidden");
+          }, 200);
+        });
+      });
+    </script>
   </body>
 </html>
