--- a/explore.html
+++ b/explore.html
@@ -30,17 +30,12 @@
       }
       .nav-link:hover {
         color: #f97316;
-        transition: color 0.3s ease;
-      }
-      .story-card:hover {
-        transform: translateY(-5px);
-        transition: transform 0.3s ease;
       }
     </style>
   </head>
   <body class="bg-gray-50">
     <!-- Navbar -->
-    <nav class="fixed w-full bg-white/90 backdrop-blur-md z-50 shadow-sm">
+    <nav class="fixed w-full bg-white z-50 shadow-sm">
       <div class="container mx-auto px-4 py-4">
         <div class="flex justify-between items-center">
           <a href="index.html" class="text-2xl font-bold text-orange-500"
