--- a/index.html
+++ b/index.html
@@ -36,12 +36,6 @@
       }
       .nav-link:hover {
         color: #f97316;
-        transition: color 0.3s ease;
-      }
-      .story-card:hover,
-      .blog-card:hover {
-        transform: translateY(-5px);
-        transition: transform 0.3s ease;
       }
       .badge {
         background-color: #f97316;
@@ -56,7 +50,7 @@
   </head>
   <body class="bg-gray-50">
     <!-- Navbar -->
-    <nav class="fixed w-full bg-white/90 backdrop-blur-md z-50 shadow-sm">
+    <nav class="fixed w-full bg-white z-50 shadow-sm">
       <div class="container mx-auto px-4 py-4">
         <div class="flex justify-between items-center">
           <div class="text-2xl font-bold text-orange-500">TravelTales</div>
@@ -72,15 +66,17 @@
             <span id="userEmail" class="hidden text-sm text-gray-600"></span>
             <button
               id="logoutBtn"
-              class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-lg text-sm transition"
+              class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-lg text-sm"
             >
               Logout
             </button>
           </div>
-          <button id="mobile-menu-toggle" class="md:hidden"><i class="bi bi-list text-2xl"></i></button>
+          <button id="mobile-menu-toggle" class="md:hidden">
+            <i class="bi bi-list text-2xl"></i>
+          </button>
           <div
             id="mobile-menu"
-            class="md:hidden hidden opacity-0 -translate-y-5 transition-all duration-200 ease-in-out flex flex-col gap-4 px-4 py-6 absolute top-full left-0 w-full bg-white shadow-md z-50"
+            class="md:hidden hidden flex flex-col gap-4 px-4 py-6 absolute top-full left-0 w-full bg-white shadow-md z-50"
           >
             <a href="explore.html" class="nav-link text-gray-700">Explore</a>
             <a href="blogs.html" class="nav-link text-gray-700">Blog</a>
@@ -90,7 +86,7 @@
             <a href="contact.html" class="nav-link text-gray-700">Contact</a>
             <button
               id="mobileLogoutBtn"
-              class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-lg text-sm transition w-full"
+              class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-lg text-sm w-full"
             >
               Logout
             </button>
@@ -124,7 +120,7 @@
             </div>
             <button
               onclick="handleSearch()"
-              class="bg-orange-500 hover:bg-orange-600 text-white px-8 py-3 rounded-full transition"
+              class="bg-orange-500 hover:bg-orange-600 text-white px-8 py-3 rounded-full"
             >
               Search
             </button>
@@ -138,9 +134,7 @@
       <h2 class="text-3xl font-bold mb-8">Featured Travel Stories</h2>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
         <!-- Cards -->
-        <div
-          class="story-card bg-white rounded-xl shadow-md overflow-hidden transition"
-        >
+        <div class="story-card bg-white rounded-xl shadow-md overflow-hidden">
           <img
             src="https://plus.unsplash.com/premium_photo-1691031428827-adf34ee712d4?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             class="h-48 w-full object-cover"
@@ -152,9 +146,7 @@
             </p>
           </div>
         </div>
-        <div
-          class="story-card bg-white rounded-xl shadow-md overflow-hidden transition"
-        >
+        <div class="story-card bg-white rounded-xl shadow-md overflow-hidden">
           <img
             src="https://plus.unsplash.com/premium_photo-1664303556708-4b582f8c6b5b?q=80&w=2874&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           />
@@ -165,9 +157,7 @@
             </p>
           </div>
         </div>
-        <div
-          class="story-card bg-white rounded-xl shadow-md overflow-hidden transition"
-        >
+        <div class="story-card bg-white rounded-xl shadow-md overflow-hidden">
           <img
             src="https://images.unsplash.com/photo-1494806812796-244fe51b774d?q=80&w=2934&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             class="h-48 w-full object-cover"
@@ -187,9 +177,7 @@
       <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold mb-8">Travel Blogs</h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-          <div
-            class="blog-card bg-white rounded-xl shadow-md overflow-hidden transition"
-          >
+          <div class="blog-card bg-white rounded-xl shadow-md overflow-hidden">
             <img
               src="https://plus.unsplash.com/premium_photo-1731606078756-d9102149265c?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
               class="h-48 w-full object-cover"
@@ -203,9 +191,7 @@
               </p>
             </div>
           </div>
-          <div
-            class="blog-card bg-white rounded-xl shadow-md overflow-hidden transition"
-          >
+          <div class="blog-card bg-white rounded-xl shadow-md overflow-hidden">
             <img
               src="https://media.istockphoto.com/id/1325412864/photo/night-celebration-party-on-the-beach.jpg?s=1024x1024&w=is&k=20&c=3kHSWb-WtVs7BaQ_-0FcIFmtYJ2SxTv3-ki2JDvqbBQ="
               class="h-48 w-full object-cover"
@@ -217,9 +203,7 @@
               </p>
             </div>
           </div>
-          <div
-            class="blog-card bg-white rounded-xl shadow-md overflow-hidden transition"
-          >
+          <div class="blog-card bg-white rounded-xl shadow-md overflow-hidden">
             <img
               src="https://media.istockphoto.com/id/537988165/photo/varanasi.jpg?s=1024x1024&w=is&k=20&c=zlypUzvUt1fFpvA7ESTKB6UE4KEY7paAizZWVhQmz2E="
               class="h-48 w-full object-cover"
@@ -336,7 +320,7 @@
                 class="px-4 py-2 rounded-lg text-gray-800"
               />
               <button
-                class="bg-orange-500 hover:bg-orange-600 px-4 py-2 rounded-lg transition"
+                class="bg-orange-500 hover:bg-orange-600 px-4 py-2 rounded-lg"
               >
                 Subscribe
               </button>
@@ -349,31 +333,33 @@
     <!-- JavaScript for Map -->
     <script>
       // Check authentication on page load
-      document.addEventListener('DOMContentLoaded', function() {
-        const isLoggedIn = localStorage.getItem('isLoggedIn');
-        const userEmail = localStorage.getItem('userEmail');
-        
+      document.addEventListener("DOMContentLoaded", function () {
+        const isLoggedIn = localStorage.getItem("isLoggedIn");
+        const userEmail = localStorage.getItem("userEmail");
+
         if (!isLoggedIn) {
-          window.location.href = 'login.html';
+          window.location.href = "login.html";
           return;
         }
-        
+
         // Display user email in navbar
         if (userEmail) {
-          document.getElementById('userEmail').textContent = userEmail;
-          document.getElementById('userEmail').classList.remove('hidden');
+          document.getElementById("userEmail").textContent = userEmail;
+          document.getElementById("userEmail").classList.remove("hidden");
         }
       });
 
       // Logout functionality
       function logout() {
-        localStorage.removeItem('isLoggedIn');
-        localStorage.removeItem('userEmail');
-        window.location.href = 'login.html';
+        localStorage.removeItem("isLoggedIn");
+        localStorage.removeItem("userEmail");
+        window.location.href = "login.html";
       }
 
-      document.getElementById('logoutBtn').addEventListener('click', logout);
-      document.getElementById('mobileLogoutBtn').addEventListener('click', logout);
+      document.getElementById("logoutBtn").addEventListener("click", logout);
+      document
+        .getElementById("mobileLogoutBtn")
+        .addEventListener("click", logout);
 
       // Initialize the map
       const map = L.map("map").setView([20.5937, 78.9629], 5); // India's coordinates
@@ -600,7 +586,7 @@
       const mobileMenuToggle = document.getElementById("mobile-menu-toggle");
       const mobileMenu = document.getElementById("mobile-menu");
 
-      mobileMenuToggle.addEventListener("click", function() {
+      mobileMenuToggle.addEventListener("click", function () {
         if (mobileMenu.classList.contains("hidden")) {
           // Show menu
           mobileMenu.classList.remove("hidden");
@@ -619,8 +605,11 @@
       });
 
       // Close mobile menu when clicking outside
-      document.addEventListener("click", function(e) {
-        if (!mobileMenuToggle.contains(e.target) && !mobileMenu.contains(e.target)) {
+      document.addEventListener("click", function (e) {
+        if (
+          !mobileMenuToggle.contains(e.target) &&
+          !mobileMenu.contains(e.target)
+        ) {
           if (!mobileMenu.classList.contains("hidden")) {
             mobileMenu.classList.remove("opacity-100", "translate-y-0");
             mobileMenu.classList.add("opacity-0", "-translate-y-5");
@@ -633,8 +622,8 @@
 
       // Close mobile menu when clicking on a link
       const mobileMenuLinks = mobileMenu.querySelectorAll("a");
-      mobileMenuLinks.forEach(link => {
-        link.addEventListener("click", function() {
+      mobileMenuLinks.forEach((link) => {
+        link.addEventListener("click", function () {
           mobileMenu.classList.remove("opacity-100", "translate-y-0");
           mobileMenu.classList.add("opacity-0", "-translate-y-5");
           setTimeout(() => {
