--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="/public/css/styles.css" />
   </head>
   <body class="bg-gray-50">
-    <!-- Navbar -->
+  <!-- Navbar hai -->
     <nav class="fixed w-full bg-white/90 backdrop-blur-md z-50 shadow-sm">
       <div class="container mx-auto px-4 py-4">
         <div class="flex justify-between items-center">
@@ -78,7 +78,7 @@
       </div>
     </nav>
 
-    <!-- Header -->
+  <!-- Header hai -->
     <header class="pt-24 pb-12 bg-orange-500">
       <div class="container mx-auto px-4">
         <h1 class="text-4xl font-bold text-white mb-4">Contact Us</h1>
@@ -88,10 +88,10 @@
       </div>
     </header>
 
-    <!-- Contact Form Section -->
+  <!-- Contact Form Section hai -->
     <section class="container mx-auto px-4 py-16">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
-        <!-- Contact Information -->
+  <!-- Contact Information hai -->
         <div>
           <h2 class="text-3xl font-bold mb-8">Get in Touch</h2>
           <div class="space-y-6">
@@ -135,7 +135,7 @@
           </div>
         </div>
 
-        <!-- Contact Form -->
+  <!-- Contact Form hai -->
         <div class="bg-white p-8 rounded-xl shadow-lg border border-orange-100">
           <div class="flex items-center gap-3 mb-8">
             <span class="text-orange-500 text-3xl"
@@ -149,7 +149,7 @@
             method="POST"
             class="space-y-6"
           >
-            <!-- Honeypot field to prevent spam -->
+            <!-- Spam rokne ke liye honeypot field hai -->
             <input type="text" name="_gotcha" style="display: none" />
 
             <div class="relative">
@@ -289,7 +289,7 @@
       </div>
     </section>
 
-    <!-- Office Locations -->
+  <!-- Office Locations hai -->
     <section class="bg-gray-100 py-16">
       <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold mb-12 text-center">Our Offices</h2>
@@ -331,7 +331,7 @@
       </div>
     </section>
 
-    <!-- Footer -->
+  <!-- Footer hai -->
     <footer class="bg-gray-800 text-white py-12">
       <div class="container mx-auto px-4">
         <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
@@ -393,7 +393,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="/public/js/navigation.js"></script>
+  <script src="public/js/navigation.js"></script>
     <script src="/public/js/forms.js"></script>
   </body>
 </html>
