--- a/explore.html
+++ b/explore.html
@@ -34,7 +34,7 @@
     </style>
   </head>
   <body class="bg-gray-50">
-    <!-- Navbar -->
+  <!-- Navbar hai -->
     <nav class="fixed w-full bg-white z-50 shadow-sm">
       <div class="container mx-auto px-4 py-4">
         <div class="flex justify-between items-center">
@@ -80,7 +80,7 @@
       </div>
     </nav>
 
-    <!-- Header -->
+  <!-- Header hai -->
     <header class="pt-24 pb-12 bg-orange-500">
       <div class="container mx-auto px-4">
         <h1 class="text-4xl font-bold text-white mb-4">
@@ -93,7 +93,7 @@
       </div>
     </header>
 
-    <!-- Featured Destinations -->
+  <!-- Featured Destinations hai -->
     <section class="container mx-auto px-4 py-16">
       <h2 class="text-3xl font-bold mb-8">Featured Destinations</h2>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -148,7 +148,7 @@
       </div>
     </section>
 
-    <!-- Categories Section -->
+  <!-- Categories Section hai -->
     <section class="bg-gray-100 py-16">
       <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold mb-8">Explore by Category</h2>
@@ -185,7 +185,7 @@
       </div>
     </section>
 
-    <!-- Footer -->
+  <!-- Footer hai -->
     <footer class="bg-gray-800 text-white py-12">
       <div class="container mx-auto px-4">
         <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
@@ -242,7 +242,8 @@
       </div>
     </footer>
 
-    <!-- Mobile Navigation JavaScript -->
+  <!-- Mobile Navigation JavaScript hai -->
+  <script src="public/js/navigation.js"></script>
     <script>
       // Check authentication on page load
       document.addEventListener('DOMContentLoaded', function() {
