--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </style>
   </head>
   <body class="bg-gray-50">
-    <!-- Navbar -->
+  <!-- Navbar hai -->
     <nav class="fixed w-full bg-white z-50 shadow-sm">
       <div class="container mx-auto px-4 py-4">
         <div class="flex justify-between items-center">
@@ -95,7 +95,7 @@
       </div>
     </nav>
 
-    <!-- Hero Section -->
+  <!-- Hero Section hai -->
     <header class="parallax-header relative flex items-center justify-center">
       <div class="absolute inset-0 bg-black/40"></div>
       <div class="relative text-center text-white px-4">
@@ -115,7 +115,7 @@
                 id="searchResults"
                 class="absolute left-0 right-0 mt-1 bg-white rounded-lg shadow-lg overflow-hidden hidden z-10"
               >
-                <!-- Search results will be populated here -->
+                <!-- Yahan search results dikhaye jayenge -->
               </div>
             </div>
             <button
@@ -129,11 +129,11 @@
       </div>
     </header>
 
-    <!-- Featured Travel Stories Section -->
+  <!-- Featured Travel Stories Section hai -->
     <section id="featured-stories" class="container mx-auto px-4 py-16">
       <h2 class="text-3xl font-bold mb-8">Featured Travel Stories</h2>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-        <!-- Cards -->
+  <!-- Cards hai -->
         <div class="story-card bg-white rounded-xl shadow-md overflow-hidden">
           <img
             src="https://plus.unsplash.com/premium_photo-1691031428827-adf34ee712d4?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
@@ -172,7 +172,7 @@
       </div>
     </section>
 
-    <!-- Blog Section -->
+  <!-- Blog Section hai -->
     <section id="blog-section" class="bg-gray-100 py-16">
       <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold mb-8">Travel Blogs</h2>
@@ -219,13 +219,13 @@
       </div>
     </section>
 
-    <!-- Profile Section -->
+  <!-- Profile Section hai -->
     <section id="profile-section" class="container mx-auto px-4 py-16">
       <h2 class="text-3xl font-bold mb-8">My Profile</h2>
       <div
         class="bg-white rounded-xl shadow-md p-6 flex flex-col md:flex-row gap-6"
       >
-        <!-- Profile Picture -->
+  <!-- Profile Picture hai -->
         <div class="flex-shrink-0">
           <img
             src="https://media.istockphoto.com/id/1364817609/vector/sketch-of-tourist-photographer-taking-picture-on-camera-outdoors.jpg?s=1024x1024&w=is&k=20&c=cEEd8oxtEmxdx-acWac5Hw4eQhQjhjBlLfa4acWciuQ="
@@ -233,7 +233,7 @@
             class="h-32 w-32 rounded-full object-cover border-4 border-orange-500"
           />
         </div>
-        <!-- Profile Details -->
+  <!-- Profile Details hai -->
         <div>
           <h3 class="text-2xl font-bold">Harshrajsinh Zala</h3>
           <p class="text-gray-600">
@@ -257,7 +257,7 @@
       </div>
     </section>
 
-    <!-- Plan Your Trip Section -->
+  <!-- Plan Your Trip Section hai -->
     <section id="plan-trip" class="bg-gray-100 py-16">
       <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold mb-8">Plan Your Next Trip</h2>
@@ -269,7 +269,7 @@
       </div>
     </section>
 
-    <!-- Footer -->
+  <!-- Footer hai -->
     <footer class="bg-gray-800 text-white py-12">
       <div class="container mx-auto px-4">
         <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
@@ -330,307 +330,10 @@
       </div>
     </footer>
 
-    <!-- JavaScript for Map -->
-    <script>
-      // Check authentication on page load
-      document.addEventListener("DOMContentLoaded", function () {
-        const isLoggedIn = localStorage.getItem("isLoggedIn");
-        const userEmail = localStorage.getItem("userEmail");
-
-        if (!isLoggedIn) {
-          window.location.href = "login.html";
-          return;
-        }
-
-        // Display user email in navbar
-        if (userEmail) {
-          document.getElementById("userEmail").textContent = userEmail;
-          document.getElementById("userEmail").classList.remove("hidden");
-        }
-      });
-
-      // Logout functionality
-      function logout() {
-        localStorage.removeItem("isLoggedIn");
-        localStorage.removeItem("userEmail");
-        window.location.href = "login.html";
-      }
-
-      document.getElementById("logoutBtn").addEventListener("click", logout);
-      document
-        .getElementById("mobileLogoutBtn")
-        .addEventListener("click", logout);
-
-      // Initialize the map
-      const map = L.map("map").setView([20.5937, 78.9629], 5); // India's coordinates
-      L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-        maxZoom: 19,
-        attribution: "© OpenStreetMap",
-      }).addTo(map);
-
-      // Predefined locations with details
-      const locations = [
-        {
-          name: "Jaipur",
-          lat: 26.9124,
-          lng: 75.7873,
-          description:
-            "The Pink City of India, Jaipur is famous for its royal palaces, vibrant bazaars, and historic forts.",
-          image:
-            "https://images.unsplash.com/photo-1602643163983-ed0babc39797?q=80&w=2865&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
-        },
-        {
-          name: "Delhi",
-          lat: 28.7041,
-          lng: 77.1025,
-          description:
-            "India's capital, Delhi, is a blend of history and modernity with famous landmarks like India Gate and Red Fort.",
-          image:
-            "https://plus.unsplash.com/premium_photo-1697730320983-f99aab252a44?q=80&w=2667&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
-        },
-        {
-          name: "Goa",
-          lat: 15.2993,
-          lng: 74.124,
-          description:
-            "Known for its beaches, nightlife, and Portuguese heritage, Goa is a paradise for travelers.",
-          image:
-            "https://images.unsplash.com/photo-1607577070449-531c2296916c?q=80&w=2825&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
-        },
-        {
-          name: "Mumbai",
-          lat: 19.076,
-          lng: 72.8777,
-          description:
-            "The city of dreams, Mumbai offers a vibrant mix of culture, entertainment, and colonial architecture.",
-          image:
-            "https://images.unsplash.com/photo-1529253355930-ddbe423a2ac7?q=80&w=2865&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
-        },
-        {
-          name: "Agra",
-          lat: 27.1767,
-          lng: 78.0081,
-          description:
-            "Home to the iconic Taj Mahal, Agra showcases the finest Mughal architecture and rich history.",
-          image:
-            "https://images.unsplash.com/photo-1564507592333-c60657eea523?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
-        },
-        {
-          name: "Varanasi",
-          lat: 25.3176,
-          lng: 82.9739,
-          description:
-            "One of the world's oldest living cities, Varanasi is a spiritual hub with its sacred Ganges ghats.",
-          image:
-            "https://images.unsplash.com/photo-1561361513-2d000a50f0dc?q=80&w=2776&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
-        },
-        {
-          name: "Udaipur",
-          lat: 24.5854,
-          lng: 73.7125,
-          description:
-            "The City of Lakes, Udaipur is known for its romantic setting, luxury palaces, and beautiful lakes.",
-          image:
-            "https://images.unsplash.com/photo-1598890777032-bde835ba27c2?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
-        },
-        {
-          name: "Kochi",
-          lat: 9.9312,
-          lng: 76.2673,
-          description:
-            "A coastal gem in Kerala, Kochi features Chinese fishing nets, colonial architecture, and vibrant art scene.",
-          image:
-            "https://images.unsplash.com/photo-1590123717647-ee0cfe88403d?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
-        },
-        {
-          name: "Rishikesh",
-          lat: 30.0869,
-          lng: 78.2676,
-          description:
-            "The yoga capital of the world, Rishikesh offers spiritual experiences, adventure sports, and serene Ganges views.",
-          image:
-            "https://images.unsplash.com/photo-1591099112017-7c7be4b63465?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
-        },
-        {
-          name: "Amritsar",
-          lat: 31.634,
-          lng: 74.8723,
-          description:
-            "Home to the Golden Temple, Amritsar is the spiritual center of the Sikh faith and famous for its cuisine.",
-          image:
-            "https://images.unsplash.com/photo-1588096344356-9b047c9471dc?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
-        },
-      ];
-
-      // Initialize markers object to store all markers
-      const markers = {};
-
-      // Function to display location details
-      function displayLocationDetails(location) {
-        // Remove existing markers
-        Object.values(markers).forEach((marker) => map.removeLayer(marker));
-
-        // Add marker for selected location
-        const marker = L.marker([location.lat, location.lng]).addTo(map);
-        markers[location.name] = marker;
-
-        // Pan to location
-        map.setView([location.lat, location.lng], 8);
-
-        // Display the location card
-        const card = document.getElementById("location-card");
-        card.innerHTML = `
-                <img src="${location.image}" alt="${location.name}" class="h-48 w-full object-cover rounded-t-xl">
-                <div class="p-4">
-                    <h3 class="text-2xl font-bold mb-2">${location.name}</h3>
-                    <p class="text-gray-600">${location.description}</p>
-                </div>
-            `;
-        card.classList.remove("hidden");
-      }
-
-      // Search functionality
-      const searchInput = document.getElementById("searchInput");
-      const searchResults = document.getElementById("searchResults");
-
-      searchInput.addEventListener("input", function (e) {
-        const searchTerm = e.target.value.toLowerCase();
-
-        if (searchTerm.length < 1) {
-          searchResults.classList.add("hidden");
-          return;
-        }
-
-        const filteredLocations = locations.filter((location) =>
-          location.name.toLowerCase().includes(searchTerm)
-        );
-
-        if (filteredLocations.length > 0) {
-          searchResults.innerHTML = filteredLocations
-            .map(
-              (location) => `
-                        <div class="p-3 hover:bg-gray-100 cursor-pointer text-gray-800" 
-                             onclick="selectLocation('${location.name}')">
-                            ${location.name}
-                        </div>
-                    `
-            )
-            .join("");
-          searchResults.classList.remove("hidden");
-        } else {
-          searchResults.classList.add("hidden");
-        }
-      });
-
-      function selectLocation(locationName) {
-        const location = locations.find((loc) => loc.name === locationName);
-        if (location) {
-          searchInput.value = location.name;
-          searchResults.classList.add("hidden");
-          displayLocationDetails(location);
-          // Scroll to map section when selecting from dropdown
-          document.getElementById("plan-trip").scrollIntoView({
-            behavior: "smooth",
-            block: "start",
-          });
-        }
-      }
-
-      function handleSearch() {
-        const searchTerm = searchInput.value;
-        const location = locations.find(
-          (loc) => loc.name.toLowerCase() === searchTerm.toLowerCase()
-        );
-        if (location) {
-          displayLocationDetails(location);
-          // Scroll to map section
-          document.getElementById("plan-trip").scrollIntoView({
-            behavior: "smooth",
-            block: "start",
-          });
-        } else {
-          alert("Please select a location from the list");
-        }
-      }
-
-      // Handle map clicks
-      map.on("click", function (e) {
-        const { lat, lng } = e.latlng;
-
-        // Find the nearest predefined location (within 1-degree threshold)
-        const location = locations.find(
-          (loc) => Math.abs(loc.lat - lat) < 1 && Math.abs(loc.lng - lng) < 1
-        );
-
-        if (location) {
-          displayLocationDetails(location);
-          searchInput.value = location.name;
-        } else {
-          alert(
-            "No predefined location found near this point. Please try another spot!"
-          );
-        }
-      });
-
-      // Close search results when clicking outside
-      document.addEventListener("click", function (e) {
-        if (
-          !searchInput.contains(e.target) &&
-          !searchResults.contains(e.target)
-        ) {
-          searchResults.classList.add("hidden");
-        }
-      });
-
-      // Mobile menu toggle functionality
-      const mobileMenuToggle = document.getElementById("mobile-menu-toggle");
-      const mobileMenu = document.getElementById("mobile-menu");
-
-      mobileMenuToggle.addEventListener("click", function () {
-        if (mobileMenu.classList.contains("hidden")) {
-          // Show menu
-          mobileMenu.classList.remove("hidden");
-          setTimeout(() => {
-            mobileMenu.classList.remove("opacity-0", "-translate-y-5");
-            mobileMenu.classList.add("opacity-100", "translate-y-0");
-          }, 10);
-        } else {
-          // Hide menu
-          mobileMenu.classList.remove("opacity-100", "translate-y-0");
-          mobileMenu.classList.add("opacity-0", "-translate-y-5");
-          setTimeout(() => {
-            mobileMenu.classList.add("hidden");
-          }, 200);
-        }
-      });
-
-      // Close mobile menu when clicking outside
-      document.addEventListener("click", function (e) {
-        if (
-          !mobileMenuToggle.contains(e.target) &&
-          !mobileMenu.contains(e.target)
-        ) {
-          if (!mobileMenu.classList.contains("hidden")) {
-            mobileMenu.classList.remove("opacity-100", "translate-y-0");
-            mobileMenu.classList.add("opacity-0", "-translate-y-5");
-            setTimeout(() => {
-              mobileMenu.classList.add("hidden");
-            }, 200);
-          }
-        }
-      });
-
-      // Close mobile menu when clicking on a link
-      const mobileMenuLinks = mobileMenu.querySelectorAll("a");
-      mobileMenuLinks.forEach((link) => {
-        link.addEventListener("click", function () {
-          mobileMenu.classList.remove("opacity-100", "translate-y-0");
-          mobileMenu.classList.add("opacity-0", "-translate-y-5");
-          setTimeout(() => {
-            mobileMenu.classList.add("hidden");
-          }, 200);
-        });
-      });
-    </script>
+    <!-- Map ke liye JavaScript hai -->
+    <script src="public/js/navigation.js"></script>
+    <script src="script.js"></script>
+  </body>
+</html>
   </body>
 </html>
