--- a/about.html
+++ b/about.html
@@ -143,44 +143,43 @@
 
   <!-- Team Section hai -->
     <section class="container mx-auto px-4 py-16">
-      <h2 class="text-3xl font-bold mb-12 text-center">Meet Our Team</h2>
-      <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+      <h2 class="text-3xl font-bold mb-12 text-center">Meet Our Founders</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-12 max-w-4xl mx-auto">
         <div class="text-center">
           <img
             src="https://images.unsplash.com/photo-1560250097-0b93528c311a?q=80&w=2574&auto=format&fit=crop"
-            alt="Team Member"
-            class="w-48 h-48 rounded-full mx-auto mb-4 object-cover"
+            alt="Harshrajsinh Zala"
+            class="w-48 h-48 rounded-full mx-auto mb-4 object-cover border-4 border-orange-500"
           />
-          <h3 class="font-bold text-xl mb-2">Rajesh Kumar</h3>
-          <p class="text-gray-600">Founder & CEO</p>
+          <h3 class="font-bold text-xl mb-2">Harshrajsinh Zala</h3>
+          <p class="text-orange-600 font-medium mb-3">Co-Founder & Tech Lead</p>
+          <p class="text-gray-600 text-sm">
+            Passionate about technology and travel, Harshrajsinh brings the technical vision to life, creating seamless digital experiences for travelers across India.
+          </p>
         </div>
         <div class="text-center">
           <img
             src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?q=80&w=2576&auto=format&fit=crop"
-            alt="Team Member"
-            class="w-48 h-48 rounded-full mx-auto mb-4 object-cover"
+            alt="Sanchita Jindal"
+            class="w-48 h-48 rounded-full mx-auto mb-4 object-cover border-4 border-orange-500"
           />
-          <h3 class="font-bold text-xl mb-2">Priya Singh</h3>
-          <p class="text-gray-600">Head of Content</p>
+          <h3 class="font-bold text-xl mb-2">Sanchita Jindal</h3>
+          <p class="text-orange-600 font-medium mb-3">Co-Founder & Creative Director</p>
+          <p class="text-gray-600 text-sm">
+            With a keen eye for storytelling and design, Sanchita crafts compelling narratives that inspire travelers to explore India's diverse cultural heritage.
+          </p>
         </div>
-        <div class="text-center">
-          <img
-            src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?q=80&w=2574&auto=format&fit=crop"
-            alt="Team Member"
-            class="w-48 h-48 rounded-full mx-auto mb-4 object-cover"
-          />
-          <h3 class="font-bold text-xl mb-2">Arun Patel</h3>
-          <p class="text-gray-600">Tech Lead</p>
-        </div>
-        <div class="text-center">
-          <img
-            src="https://images.unsplash.com/photo-1580489944761-15a19d654956?q=80&w=2661&auto=format&fit=crop"
-            alt="Team Member"
-            class="w-48 h-48 rounded-full mx-auto mb-4 object-cover"
-          />
-          <h3 class="font-bold text-xl mb-2">Meera Reddy</h3>
-          <p class="text-gray-600">Community Manager</p>
-        </div>
+      </div>
+      
+      <!-- Founder Story -->
+      <div class="mt-16 max-w-4xl mx-auto text-center">
+        <h3 class="text-2xl font-bold mb-6">Our Journey Together</h3>
+        <p class="text-gray-600 text-lg leading-relaxed">
+          TravelTales was born from the shared vision of Harshrajsinh and Sanchita during their college years. 
+          What started as weekend travel adventures and shared stories evolved into a mission to connect fellow 
+          travelers with authentic Indian experiences. Together, they combine technical expertise with creative 
+          storytelling to build a platform that celebrates India's incredible diversity.
+        </p>
       </div>
     </section>
 
