reset to working version

--- a/login.html
+++ b/login.html
@@ -41,7 +41,10 @@
       }
       .btn-primary {
         background: linear-gradient(135deg, #f97316, #ea580c);
-      }`
+      }
+      .social-btn {
+        
+      }
     </style>
   </head>
   <body class="bg-gray-50">
